# zcash-light-client-ffi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  Package.swift  README.md  libzcashlc.podspec  zizmor.yml
.github/workflows/: build-binary-preview.yml  build.yml  clippy.yml  release.yml  swift.yml
releases/XCFramework/libzcashlc.xcframework/ios-arm64/libzcashlc.framework/Headers/: zcashlc.h
releases/XCFramework/libzcashlc.xcframework/ios-arm64/libzcashlc.framework/Modules/: module.modulemap
releases/XCFramework/libzcashlc.xcframework/ios-arm64_x86_64-simulator/libzcashlc.framework/Headers/: zcashlc.h
releases/XCFramework/libzcashlc.xcframework/macos-arm64_x86_64/libzcashlc.framework/: Info.plist
releases/XCFramework/libzcashlc.xcframework/macos-arm64_x86_64/libzcashlc.framework/Headers/: zcashlc.h
rust/: Cargo.toml  build.rs  rust-toolchain.toml  wrapper.c  wrapper.h
rust/src/: derivation.rs  ffi.rs  lib.rs  os_log.rs  tor.rs
rust/src/ffi/: sys.rs
rust/src/os_log/: layer.rs  signpost.rs  writer.rs
support/: Info.plist  platform-Info.plist
