[package]
name = "libzcashlc"
version = "0.17.0"
authors = [
    "Jack Grigg <jack@electriccoin.co>",
    "Francisco Gindre",
    "Lukas Korba <lukas@tangiblecodes.com>",
]
license = "MIT"
edition = "2024"
rust-version = "1.87"
build = "build.rs"

[dependencies]

# Zcash
orchard = "0.11"
sapling = { package = "sapling-crypto", version = "0.5", default-features = false }
transparent = { package = "zcash_transparent", git = "http://github.com/pacu/librustzcash", rev = "12291b92e74350dcd6c407bd50c58ee2fc4b5e63", default-features = false }
zcash_address = { git = "http://github.com/pacu/librustzcash", rev = "12291b92e74350dcd6c407bd50c58ee2fc4b5e63" }
zcash_client_backend = { git = "http://github.com/pacu/librustzcash", rev = "12291b92e74350dcd6c407bd50c58ee2fc4b5e63", features = [
    "lightwalletd-tonic-tls-webpki-roots",
    "orchard",
    "pczt",
    "tor",
    "transparent-inputs",
    "unstable",
] }
zcash_client_sqlite = { git = "http://github.com/pacu/librustzcash", rev = "12291b92e74350dcd6c407bd50c58ee2fc4b5e63", features = ["orchard", "transparent-inputs", "unstable", "serde"] }
zcash_note_encryption = "0.4.1"
zcash_primitives = { git = "http://github.com/pacu/librustzcash", rev = "12291b92e74350dcd6c407bd50c58ee2fc4b5e63" }
zcash_proofs = { git = "http://github.com/pacu/librustzcash", rev = "12291b92e74350dcd6c407bd50c58ee2fc4b5e63" }
zcash_protocol = { git = "http://github.com/pacu/librustzcash", rev = "12291b92e74350dcd6c407bd50c58ee2fc4b5e63" }
zip32 = "0.2"
pczt = { git = "http://github.com/pacu/librustzcash", rev = "12291b92e74350dcd6c407bd50c58ee2fc4b5e63", features = ["prover"] }

# Infrastructure
prost = "0.13"
rusqlite = "0.32"
secrecy = "0.8"
rand = "0.8"
nonempty = "0.11"

# FFI
anyhow = "1.0"
ffi_helpers = "0.3"
uuid = "1.1"
bitflags = "2"

# HTTP
bytes = "1"
http = "1"
http-body-util = "0.1"

# Initialization
cfg-if = "1.0"
rayon = "1.7"

# lightwalletd
tonic = "0.13"

# Logging
log-panics = "2.0"
once_cell = "1.0"
sharded-slab = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Tor
fs-mistrust = "0.9"
tor-rtcompat = "0.28"
rust_decimal = { version = "1", default-features = false, features = ["c-repr"] }
# - The "static" feature is required for the "compression" default feature of arti-client.
xz2 = { version = "0.1", features = ["static"] }

[build-dependencies]
bindgen = "0.71"
cbindgen = "0.29"
cc = "1.0"

[lib]
name = "zcashlc"
path = "src/lib.rs"
crate-type = ["staticlib"]

[profile.release]
lto = true
